--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ type="text/css">
         <p>PERFECT FOR CELEBRATIONS,IF YOU WANT TO CONSERVE ELECTRICITY OR IF LOADSHEDDING STRIKES</p>
        
       </div>
-      <h1><em>A VEGAN POTJIE RECIPE</em></h1>
+      <h1 class="thick-gold-border"><em>A VEGAN POTJIE RECIPE</em></h1>
       <!-- ingredient and method -->
       <section id="left">
       <h2><em>INGREDIENTS</em></h2>
