--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="styles.css">
 <link href="https://fonts.googleapdfs.com/css? family=Lobster" rel="stylesheet"
 type="text/css">
-<title>POTJIE RECIPE</title>
+<title class="thick-yellow-border">POTJIE RECIPE</title>
 <span class="border border-dark"></span>
 </head>
 <body>
