--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ type="text/css">
           <td>CARBOHYDRATES</td>
           <td>5.7g</td>
           
-        
+        <!-- ADDED COMMENTS -->
         </tr>
         <tr>
           <td>CALORIES</td>
